--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /week_1/week_2/build/
 /week_2/week_2/build/
 /week_2/week_2/nbproject/private/
+/week_3/Task_one/nbproject/private/
+/week_3/Task_one/build/
