--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /week_2/week_2/nbproject/private/
 /week_3/Task_one/nbproject/private/
 /week_3/Task_one/build/
+/New Folder/week_4/nbproject/private/
+/New Folder/week_4/build/
