--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 /New Folder/week_4/nbproject/private/
 /New Folder/week_4/build/
 /week_5/week_5/nbproject/private/
+/week_5/week_5/build/
+/week_6/week_6/nbproject/private/
+/week_6/week_6/build/
