--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /week_5/week_5/build/
 /week_6/week_6/nbproject/private/
 /week_6/week_6/build/
+/week_7/week_7/nbproject/private/
+/week_7/week_7/build/
