--- a/GradeCalcProject2/nbproject/project.properties
+++ b/GradeCalcProject2/nbproject/project.properties
@@ -52,7 +52,10 @@ javac.source=20
 javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
